--- a/LabThree/Clock/clockCSS.css
+++ b/LabThree/Clock/clockCSS.css
@@ -1,10 +1,4 @@
-.container {
-    margin: 0 auto;
-    width: 500px;
-    text-align: center;
-    margin-top: 100px;
-    border: black solid 1 px;
-    font-family: sans-serif;
-    padding-bottom: 50px;
+.clockDiv {
+    padding: 30px;
 }
 
