--- a/LabThree/StopWatch/rxjs-counter/src/components/Counter/style.css
+++ b/LabThree/StopWatch/rxjs-counter/src/components/Counter/style.css
@@ -2,16 +2,26 @@
   width: 100%;
   white-space: nowrap;
 }
-
-.col {
-  margin: 8px 8px;
-  display: inline-block;
-  min-width: 64px;
-}
-
 .left-col {
   float: left;
   width: 200px;
   margin-right: 24px;
   text-align: center;
+}
+.col {
+  margin: 8px 8px;
+  display: inline-block;
+  min-width: 64px;
+}
+.buttons {
+  background-color: grey;
+  border: solid;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
